--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,16 @@ services:
     ports:
       - 8081:8080
       
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+    - 9090:9090
+    command:
+    - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+    - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+
 volumes:
   db-java-data:
   db-java-data-tester:
