--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,11 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
     ports:
-      - 5433:5432
+      - 5433:5433
+    command: -p 5433
 
   et-app:
-    image: pkwasek/et-angular-app:5.6
+    image: pkwasek/et-angular-app:5.7
     container_name: et-app-angular
     ports:
       - 4200:80
@@ -39,7 +40,7 @@ services:
       - 3000:3000
 
   et-api:
-    image: pkwasek/et-api:5.3
+    image: pkwasek/et-api:5.6
     container_name: et-api
     depends_on:
       - dbpostgresql
@@ -47,7 +48,7 @@ services:
       - 8080:8080
 
   et-tester:
-    image: pkwasek/et-tester:1.3
+    image: pkwasek/et-tester:1.6
     container_name: et-tester
     depends_on:
       - dbtester
